@@ -1,0 +1,11 @@
+[Desktop Entry]
+Encoding=UTF-8
+_Name=Labyrinth Mind-mapping
+_GenericName=Mind-mapping
+_Comment=Map your mind
+Exec=labyrinth
+Icon=labyrinth
+StartupNotify=true
+Terminal=false
+Type=Application
+Categories=GNOME;GTK;Application;Office;
